# taskfile

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
example/: Taskfile
example/tasks/: deploy.Taskfile  docker.Taskfile
install/: install.sh
src/: cli.rs  discover.rs  discovery.rs  display.rs  executor.rs  main.rs  resolver.rs  runner.rs  scaffold.rs  script.rs  suggest.rs  updater.rs
src/discover/: detector.rs  json.rs  mod.rs  prompt.rs  writer.rs
src/discover/detectors/: docker.rs  dockerfile.rs  go.rs  makefile.rs  mod.rs  node.rs  python.rs  ruby.rs  rust.rs
src/parser/: ast.rs  error.rs  mod.rs
tests/: integration.rs
