[workspace]
members = ["lsp-server"]

[package]
name = "task"
version = "0.8.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
thiserror = "2"
colored = "3"
dialoguer = { version = "0.12.0", default-features = false }

[dev-dependencies]
tempfile = "3.27.0"
